[package]
name = "pombase-gocam-server"
version = "0.7.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
pombase-gocam = "0.96.0"
pombase-gocam-process = { git = "https://github.com/pombase/pombase-gocam-process.git", version = "0.112.0" }
tokio = { version = "^1", default-features = false, features = ["rt-multi-thread"]}
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6.6", features = ["fs", "normalize-path", "trace"] }
axum = { version = "0.8", features = ["macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.20", features=["env-filter"] }
getopts = "0.2"
serde = "1.0.225"
serde_json = "1.0.145"
mime_guess = "2.0.5"
anyhow = "1.0.99"

[profile.dev]
opt-level = 0
debug = true
incremental = true
lto = "off"

[profile.releasedev]
inherits = "release"
opt-level = 1
debug = true
codegen-units = 256
incremental = true
lto = "off"

[profile.release]
opt-level = 3
codegen-units = 1
debug = true
lto = true
